<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.jiujiu.question.ui.main.MainActivityViewModel" />
    </data>


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/main_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.jiujiu.question.ui.main.MainActivity">


            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/Theme.Quiz.Toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary" />

            </com.google.android.material.appbar.AppBarLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:id="@+id/options_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true"
                    android:visibility="visible">

                    <TextView
                        style="@style/TextStyle.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_category" />

                    <org.angmarch.views.NiceSpinner
                        android:id="@+id/catetory_spinner"
                        style="@style/TextStyle.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:backgroundTint="@color/chipBackgroundColor"
                        app:textTint="?android:attr/textColorPrimary" />

                    <TextView
                        style="@style/TextStyle.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_difficulty" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_difficulty_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="8dp"
                        app:checkedChip="@id/chip_difficulty_any"
                        app:chipSpacingHorizontal="16dp"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_difficulty_any"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/chip_choice"
                            app:chipText="@string/str_any" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_difficulty_easy"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/chip_choice"
                            app:chipText="@string/difficulty_easy" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_difficulty_medium"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/chip_choice"
                            app:chipText="@string/difficulty_medium" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_difficulty_hard"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/chip_choice"
                            app:chipText="@string/difficulty_hard" />
                    </com.google.android.material.chip.ChipGroup>


                    <TextView
                        style="@style/TextStyle.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/str_type" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_type_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="8dp"
                        app:checkedChip="@id/chip_type_any"
                        app:chipSpacingHorizontal="24dp"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_type_any"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/chip_choice"
                            app:chipText="@string/str_any" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_type_multiple"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/chip_choice"
                            app:chipText="@string/type_multi_choice" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_type_boolean"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/chip_choice"
                            app:chipText="@string/type_true_false" />

                    </com.google.android.material.chip.ChipGroup>

                    <TextView
                        style="@style/TextStyle.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/str_amount" />


                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_amount_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="8dp"
                        app:checkedChip="@id/chip_amount_5"
                        app:chipSpacingHorizontal="16dp"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_amount_5"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/chip_choice"
                            app:chipText="@string/amount_5" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_amount_10"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/chip_choice"
                            app:chipText="@string/amount_10" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_amount_15"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/chip_choice"
                            app:chipText="@string/amount_15" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_amount_20"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/chip_choice"
                            app:chipText="@string/amount_20" />

                    </com.google.android.material.chip.ChipGroup>

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.Quiz.Button"
                        android:id="@+id/startButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:transitionName="@string/transition_button_quiz"
                        android:onClick="startQuiz"
                        android:text="@string/str_start" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:visibility="@{viewModel.isLoading ? View.VISIBLE: View.GONE}" />


            </FrameLayout>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|left"
            app:headerLayout="@layout/navigation_header"
            app:menu="@menu/navigation_items" />

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>

